maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:30: error: missing argument list for method setDirection in class AbstractBuggle
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setDirection _` or `setDirection(_)` instead of `setDirection`.
    setDirection()=Direction.EAST
    ^PledgeMaze:46: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:46: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:53: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:53: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^